test/testdata/functions/builtin/not_indexable_assignment_error.lox
clock[0] = 0; // error: 'function' value is not indexable
